--- a/divyam-vasudha/causes.html
+++ b/divyam-vasudha/causes.html
@@ -110,7 +110,7 @@
     <main>
         
         <div class="content">
-            <img src="images/climate_cause1.jpg" alt="Burning Fossil Fuels">
+            <img src="climate_cause1.jpg" alt="Burning Fossil Fuels">
             <div class="text">
                 <h3>Burning Fossil Fuels</h3>
                 <p>The combustion of fossil fuels such as coal, oil, and natural gas for energy and transportation releases large amounts of carbon dioxide (CO2) into the atmosphere. CO2 is a major greenhouse gas that traps heat, contributing to the warming of the planet.</p>
@@ -118,7 +118,7 @@
         </div>
 
         <div class="content">
-            <img src="images/climate_cause3.jpg" alt="Deforestation">
+            <img src="climate_cause3.jpg" alt="Deforestation">
             <div class="text">
                 <h3>Deforestation</h3>
                 <p>Forests act as carbon sinks, absorbing CO2 from the atmosphere. Deforestation, particularly for agriculture, logging, and urban development, reduces the number of trees available to absorb CO2, thereby increasing atmospheric CO2 levels and contributing to climate change.</p>
@@ -126,7 +126,7 @@
         </div>
 
         <div class="content">
-            <img src="images/climate_cause4.jpg" alt="Industrial Processes">
+            <img src="climate_cause4.jpg" alt="Industrial Processes">
             <div class="text">
                 <h3>Industrial Processes</h3>
                 <p>Industrial activities, including manufacturing, cement production, and chemical processes, release greenhouse gases such as methane (CH4), nitrous oxide (N2O), and fluorinated gases. These gases have a stronger heat-trapping potential than CO2, although they are present in smaller quantities.</p>
@@ -134,7 +134,7 @@
         </div>
 
         <div class="content">
-            <img src="images/climate_cause5.jpg" alt="Agricultural Practices">
+            <img src="climate_cause5.jpg" alt="Agricultural Practices">
             <div class="text">
                 <h3>Agricultural Practices</h3>
                 <p>Agriculture contributes to climate change through practices such as livestock farming, which produces methane emissions from enteric fermentation (digestive processes of ruminant animals like cows) and manure management. Additionally, the use of synthetic fertilizers releases nitrous oxide, another potent greenhouse gas.</p>
@@ -144,7 +144,7 @@
         
 
         <div class="content">
-            <img src="images/climate_cause6.jpg" alt="Waste Management">
+            <img src="climate_cause6.jpg" alt="Waste Management">
             <div class="text">
                 <h3>Waste Management</h3>
                 <p>Improper waste management practices, including the decomposition of organic waste in landfills and the release of methane from anaerobic conditions, contribute to greenhouse gas emissions.</p>
