--- a/divyam-vasudha/climate_change.html
+++ b/divyam-vasudha/climate_change.html
@@ -126,18 +126,18 @@
     <main>
         <div class="content">
             <p>Climate change refers to the long-term alteration of global weather patterns, primarily attributed to human activities that increase greenhouse gas emissions. The burning of fossil fuels for energy, industrial processes, and deforestation are major contributors to the accumulation of greenhouse gases like carbon dioxide (CO2) and methane (CH4) in the atmosphere. These gases trap heat, leading to a warming effect known as the greenhouse effect.</p>
-            <img class="image" src="images/cc2.jpg" alt="Earth Image">
+            <img class="image" src="cc2.jpg" alt="Earth Image">
         </div>
         <div class="content">
-            <img class="image" src="images/cc8.jpg" alt="Ocean Image">
+            <img class="image" src="cc8.jpg" alt="Ocean Image">
             <p>The impacts of climate change are diverse and far-reaching. Rising global temperatures result in more frequent and intense heatwaves, exacerbating heat-related illnesses and stressing vulnerable populations. Melting polar ice caps and glaciers contribute to rising sea levels, threatening low-lying coastal areas with increased flooding and erosion.</p>
         </div>
         <div class="content">
             <p>Changes in weather patterns lead to more extreme events such as hurricanes, droughts, and heavy rainfall, affecting agriculture, water resources, and infrastructure. Coastal communities are particularly at risk from storm surges and sea-level rise.</p>
-            <img class="image" src="images/cc4.jpg" alt="Forest Image">
+            <img class="image" src="cc4.jpg" alt="Forest Image">
         </div>
         <div class="content">
-            <img class="image" src="images/cc6.jpg" alt="Wildlife Image">
+            <img class="image" src="cc6.jpg" alt="Wildlife Image">
             <p>Biodiversity faces significant threats as ecosystems struggle to adapt to changing conditions. Species migration and extinction rates accelerate as habitats shift and become less suitable for many organisms.</p>
         </div>
     </main>
