--- a/divyam-vasudha/effects.html
+++ b/divyam-vasudha/effects.html
@@ -167,7 +167,7 @@
             </div>
         </div>
         <div class="image">
-            <img src="images/cc1j.jpg" alt="Effects of Climate Change">
+            <img src="cc1j.jpg" alt="Effects of Climate Change">
         </div>
     </main>
     <footer>
