--- a/divyam-vasudha/facts.html
+++ b/divyam-vasudha/facts.html
@@ -112,11 +112,11 @@
                 <h2>Introduction</h2>
                 <p>India is significantly affected by climate change, leading to diverse impacts on its environment, economy, and society.</p>
             </div>
-            <img src="images/india_climate_impact.jpg" alt="India Climate Impact">
+            <img src="india_climate_impact.jpg" alt="India Climate Impact">
         </section>
 
         <section id="temperature-rise" class="content">
-            <img src="images/temperature_rise.jpg" alt="Temperature Rise">
+            <img src="temperature_rise.jpg" alt="Temperature Rise">
             <div class="text">
                 <h2>Temperature Rise</h2>
                 <p>India has experienced a steady increase in average temperatures, leading to heatwaves and altering weather patterns.</p>
@@ -130,11 +130,11 @@
                 <p>Increased frequency and intensity of cyclones, floods, and droughts are becoming more common due to climate change.</p>
                 <p>For instance, cyclones like Cyclone Amphan and Cyclone Nisarga have caused extensive damage in coastal regions, highlighting the vulnerability of these areas to extreme weather events exacerbated by climate change.</p>
             </div>
-            <img src="images/extreme_events.jpg" alt="Extreme Events">
+            <img src="extreme_events.jpg" alt="Extreme Events">
         </section>
 
         <section id="water-scarcity" class="content">
-            <img src="images/water_scarcity.jpg" alt="Water Scarcity">
+            <img src="water_scarcity.jpg" alt="Water Scarcity">
             <div class="text">
                 <h2>Water Scarcity</h2>
                 <p>Changing rainfall patterns and melting glaciers threaten India's water security, affecting agriculture and urban populations.</p>
