--- a/divyam-vasudha/index.html
+++ b/divyam-vasudha/index.html
@@ -97,16 +97,16 @@
     </nav>
     <div class="carousel-container">
         <div class="carousel">
-            <img src="images/image1.jpg" alt="Image 1">
-            <img src="images/image2.jpg" alt="Image 2">  
-            <img src="images/image3.jpg" alt="Image 3">
-            <img src="images/image4.jpg" alt="Image 4">
-            <img src="images/image5.jpg" alt="Image 5">
-            <img src="images/image1.jpg" alt="Image 1">
-            <img src="images/image2.jpg" alt="Image 2">  
-            <img src="images/image3.jpg" alt="Image 3">
-            <img src="images/image4.jpg" alt="Image 4">
-            <img src="images/image5.jpg" alt="Image 5">
+            <img src="image1.jpg" alt="Image 1">
+            <img src="image2.jpg" alt="Image 2">  
+            <img src="image3.jpg" alt="Image 3">
+            <img src="image4.jpg" alt="Image 4">
+            <img src="image5.jpg" alt="Image 5">
+            <img src="image1.jpg" alt="Image 1">
+            <img src="image2.jpg" alt="Image 2">  
+            <img src="image3.jpg" alt="Image 3">
+            <img src="image4.jpg" alt="Image 4">
+            <img src="image5.jpg" alt="Image 5">
         </div>
     </div>
     <main>
